# investment-agent

./: .gitignore  README.md  debug_yf.py  pyproject.toml  ui.py  verify_context_aware.py  verify_research.py  verify_tool.py
src/: api.py  main.py  utils.py
src/agents/: data_analyst.py  editor.py  news_analyst.py  risk_manager.py
src/tools/: finance_tools.py
